--- a/src/components/CheckoutProduct/CheckoutProduct.css
+++ b/src/components/CheckoutProduct/CheckoutProduct.css
@@ -2,6 +2,8 @@
   display: flex;
   margin-top: 20px;
   margin-bottom: 20px;
+  -webkit-box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.6);
 }
 
 .checkoutProduct__info {
