--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -10,6 +10,14 @@
   min-width: 100px;
   background-color: white;
   z-index: 1;
+  transition: 0.2s linear;
+}
+
+.product:hover {
+  transform: scale(1.05);
+  transition: 0.2s linear;
+  -webkit-box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.6);
 }
 
 .product > img {
